fixed footer img overflow

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ input, textarea {border-width: 0; border-radius: 5px; border-bottom: 2px solid w
 #footer_box_l{display: inline-block; float: left; text-align: left;}
 #footer_box_r{display: inline-block; float: right; text-align: right;}
 #footer_img {background-color: rgba(71, 162, 174, 0.2); width: 100%; 
-             height: 400px; position: relative; left: 0; }
+             height: 400px; position: relative; left: 0; display: inline-block;}
 h1 {}
 a {text-decoration: none;}
 
